# Noise-aware-Parameter-Efficient-CLIP-Fine-tuning

./: .gitignore  CLAUDE.md  COMPETITION_RULES_AGENT.md  CURRENT_STAGE_ACCEPTANCE.md  README.md  findings.md  progress.md  pytest.ini  reproduce_acceptance.sh  requirements.txt  run_a0_acceptance.sh  task_plan.md
reproducibility/aegis_f1/: .gitignore  PROVENANCE.md  README.md  pyproject.toml
reproducibility/aegis_f1/aegis_clip/: __init__.py  a2_gate.py  a2_kept.py  balanced_inference.py  balanced_transport.py  cache_diagnostic.py  checkpoint.py  class_diagnostic.py  config.py  data.py  evaluation.py  features.py  fine_trust.py  image_preprocess.py  kta_curriculum.py  lineage.py  local_feature_adapter.py  local_inference.py  local_prototype.py  local_residual.py  losses.py  model.py  multi_region_inference.py  multiprototype.py  n3_gate.py  oof_rebuild.py  part_token_adapter.py  prior_alignment.py  prompt_audit.py  representation_diagnostic.py  runtime.py  snscl.py  soup.py  structural.py  structured_allocation.py  submission.py  trainer.py  trajectory.py  trust.py  trust_subspace.py  (+2 more)
reproducibility/aegis_f1/configs/: a0_fulldata_anchor.yaml  a1_cvt_soft.yaml  a2_cvt_cap.yaml  a3_cvt_ln_distill.yaml  b0_cached_nomix.yaml  b1_cached_cvt_soft.yaml  b2_cached_cvt_cap.yaml  b3_elr_corrected.yaml  b4_elr_scaled.yaml  b5_classwise_dual_gce.yaml  c0_feature_adapter.yaml  c1_gated_feature_adapter.yaml  c2_gated_trust_weight.yaml  c3_lnpost_distill.yaml  c4_anchored_residual_head.yaml  cr0_baseline.yaml  cr1_hard_gate.yaml  cr2_soft_gate.yaml  d0_full_train_anchor.yaml  d1_full_train_gated_adapter.yaml  e2_mixup_ce5_replica.yaml  e7_mixup_ce5_seed3407.yaml  e8_full_train_mixup_continuation.yaml  f1_visual_lora_clean_core.yaml  f1_visual_lora_clean_core_a2_parent.yaml  f1_visual_lora_clean_core_a2_parent_strict.yaml  f1_visual_lora_clean_core_a2_parent_strict_s3407.yaml  f2_visual_lora_fullfit.yaml  f3a_conflict_keep_cached_dev.yaml  f3b_conflict_drop_cached_dev.yaml  f4_highres_288_eval.yaml  f6_a2_disjoint_lora_gate.yaml  f7_a2_fixed_fullfit.yaml  h0_a2_disjoint_adapter_control.yaml  h1_a2_disjoint_ntscl_adapter.yaml  h2_a2_kta_anchor_control.yaml  h3_a2_kta_cyclic_damping.yaml  i1c2_a2_structured_selection_disjoint.yaml  i1c_a2_structured_selection_control.yaml  i1s2_a2_structured_correction_disjoint.yaml  (+38 more)
reproducibility/aegis_f1/docs/: A2_PARENT_SWAP_PROTOCOL_REPAIR_PLAN.md  COMPETITION_COMPLIANCE.md  E2_E21_RESULTS_2026-07-18.md  EXPERIMENT_PROTOCOL.md  F1_SUBMISSION_REPORT_2026-07-18.md  F2_FULLFIT_PLAN_2026-07-19.md  F3_CONSENSUS_CONFLICT_PROTOCOL_2026-07-19.md  F4_HIGHRES_PROTOCOL_2026-07-19.md  F6_A2_DISJOINT_LORA_GATE_2026-07-20.md  F7_A2_FIXED_FULLFIT_PROTOCOL_2026-07-20.md  G1_TRAIN_ONLY_VISUAL_MEMORY_PROTOCOL_2026-07-20.md  H1_NOISE_TOLERANT_CONTRASTIVE_GATE_2026-07-20.md  H3_KTA_CYCLIC_GATE_2026-07-20.md  I0_OOF_LOGIT_RECONSTRUCTION_PROTOCOL_2026-07-20.md  I1_CROSSFIT_STRUCTURED_ALLOCATION_PROTOCOL_2026-07-20.md  J1_TRUST_ALIGNED_BROAD_LORA_PROTOCOL_2026-07-20.md  K1_SNSCL_PROTOCOL_2026-07-20.md  L1_CROSSFITTED_PRIOR_CORRECTION_PROTOCOL_2026-07-20.md  M1_ATTENTION_LOCAL_GLOBAL_TTA_PROTOCOL_2026-07-20.md  M1_F1_A2_TRANSFER_PROTOCOL_2026-07-20.md  M2_DISCRIMINATIVE_MULTI_REGION_PROTOCOL_2026-07-20.md  M3_FLIP_M1_COMPLEMENTARY_TTA_PROTOCOL_2026-07-20.md  N10_CROSSFITTED_FINE_CONFLICT_CAP_PROTOCOL_2026-07-20.md  N11_CLASS_RETENTION_BALANCED_SOFTMAX_PROTOCOL_2026-07-21.md  N12_ACTIVE_FORGETTING_NOISE_SUPPRESSION_PROTOCOL_2026-07-21.md  N1_LEARNED_LOCAL_RESIDUAL_HEAD_PROTOCOL_2026-07-20.md  N2_TRUST_WEIGHTED_LOCAL_CLASS_PROTOTYPE_PROTOCOL_2026-07-20.md  N3_A2_ADAPTFORMER_GATE_PROTOCOL_2026-07-20.md  N4_FULL_IMAGE_LETTERBOX_GATE_2026-07-20.md  N5_N3_HIGHRES_ADAPTATION_PROTOCOL_2026-07-20.md  N6_A2_DEEP_VISUAL_PROMPT_PROTOCOL_2026-07-20.md  N7_A2_DSPT_VISUAL_PROMPT_PROTOCOL_2026-07-20.md  N9_A2_FULL_DEPTH_FIXED_BUDGET_ADAPTER_PROTOCOL_2026-07-20.md  O1_ADAPTFORMER_MIXUP_GATE_PROTOCOL_2026-07-21.md  O2_F1_ATTENTION_LOCAL_TRAINING_PROTOCOL_2026-07-22.md  O3_F1_LOCAL_ONLY_FEATURE_ADAPTER_PROTOCOL_2026-07-22.md  O3_R1_BATCH_REPRODUCIBILITY_AMENDMENT_2026-07-22.md  P1_BALANCED_PRIOR_PLAN_2026-07-19.md  PLATFORM_GAP_CLASS_DIAGNOSTIC_2026-07-20.md  PLATFORM_RESULTS_2026-07-22.md  (+10 more)
reproducibility/aegis_f1/scripts/: run_logged_stage.sh  run_pipeline_p1_p2.py  run_pipeline_p1_p2.sh  run_stage.sh  watch_best_checkpoints.py
reproducibility/aegis_f1/tests/: test_a2_gate.py  test_a2_kept.py  test_audit_label_structure.py  test_balanced_inference.py  test_balanced_transport.py  test_cache_diagnostic.py  test_checkpoint.py  test_class_diagnostic.py  test_config.py  test_data.py  test_evaluation.py  test_features.py  test_fine_trust.py  test_image_preprocess.py  test_kta_curriculum.py  test_legacy_checkpoint_conversion.py  test_local_feature_adapter.py  test_local_inference.py  test_local_prototype.py  test_local_residual.py  test_logit_comparison.py  test_losses.py  test_model.py  test_multi_region_inference.py  (+20 more)
(+1066 files in other folders)
